https://ovso.github.io/blog/2018/04/18/gradle-dependencies-exclude/

--- a/src/main/resources/static/title.html
+++ b/src/main/resources/static/title.html
@@ -27,7 +27,7 @@
             success: function(response) {
                 $('#playerCountForm').hide();
                 $('#gameStatus').text(response);
-                playGame();
+                window.location.href = '/main2.html'
             },
             error: function(xhr, status, error) {
                 $('#playerCountForm').hide();
